[package]
name = "taiko-batch-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1", features = ["full", "json-rpc", "providers", "sol-types", "transport-http"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
